Google SEO verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/log1o.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="hVR9UOgNFz14lkzeM3w3WWBaLv5UWunvejfbMzp1JfY"
+    />
     <title>Yossef Errazik</title>
   </head>
   <body>
